# build-scripts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md
.github/instructions/: build-scripts.md
.github/prompts/: build-docs.prompt.md
.github/workflows/: ci-dotnet.yml  ci-javascript.yml  ci-python.yml
.obsidian/: app.json  workspace.json
cs/: README.md  build-full.bat  build.config.example.bat
js/: README.md  build.js  eslint.config.js  package.json  vite.config.ts
python/: README.md  build.py  pyproject.toml
